# a-b-testing-marketing

./: Makefile  README.md  pyproject.toml  requirements.txt
marketing/: downloadData.py
notebooks/: abTest.ipynb  dataExploration.ipynb
